Working on user membership page.

--- a/template/ManageUserContact.html
+++ b/template/ManageUserContact.html
@@ -83,7 +83,7 @@ by upating your Google account.
 	{% for name,val in me.communication.iteritems() %}
 		<tr><td><input type="text" class="ss-input" value="{{ name }}" placeholder="eg. Phone" item="name"/></td>
 			<td><input type="text" class="ss-input" value="{{ val }}" placeholder="eg. 909-123-4567" item="value"/>
-				<span class="command-link" item="delete-comm" style="float:right;">Cancel</span>
+				<span class="command-link" item="delete-comm" style="float:right;">Remove</span>
 			</td>
 		</tr>
 	{% endfor %}
