--- a/template/base.html
+++ b/template/base.html
@@ -43,6 +43,7 @@
 	
 	// some global initialization
 	j$(document).ready(function(){
+		j$('input[type="date"]').datepicker();
 	});
 	</script>	
 	
