--- a/template/UserBase.html
+++ b/template/UserBase.html
@@ -3,14 +3,14 @@
 {% block level_2_navigation %}
 	<ul>
 		<li id="nav-user-contact">
-			<a href="/user/contact" title="Browse and shop">
+			<a href="/user/contact" title="User contact information">
 				<img src="http://cdn2.iconfinder.com/data/icons/picol-vector/32/user_profile_edit-128.png"/>
 			</a>
 			<h3>User Info</h3>
 		</li>
 
-		<li id="nav-cart-review">
-			<a href="/cart/review?cart={{ cart.key.id() }}" title="Review my shopping cart">
+		<li id="nav-user-membership">
+			<a href="/user/membership" title="Memberships">
 				<img src="http://cdn4.iconfinder.com/data/icons/vectory-personnel-1/40/group_1-128.png"/>
 			</a>
 			<h3>Membership</h3>
