--- a/template/ManageUserMembership.html
+++ b/template/ManageUserMembership.html
@@ -134,8 +134,16 @@ supporting your business. <a href="">Learn more</a> of different memberships and
 		<div>
 			<span class="command-link" id="add-new-membership" style="float:right;">Add</span>
 		
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="MDHCW45BKX2TJ">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
+
+
 			<input type="submit" value="Save" id="btn-save-new-membership" class="my-button"/>
-	
+				
 			<table class="sf-table two-col-table" id="table-new-membership">
 			<thead><tr><td>Role</td><td>Start Date</td></tr></thead>
 			<tbody>
