Many changes. BuyOrder model has now filled qty, approved qty and remaining qty so only filled qty ==0 can one be deleted. This makes fill update and cancel all involve updating the BuyOrder accordingly, so more writes per action. However, this will allow us to compute fill ratio and rank hot items for reports.

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -9,6 +9,10 @@ body{
 h1,h2,h3,h4,h5{
 	font-family: Verdana, Geneva, sans-serif;
 }
+h1,h2,h3{
+	margin-bottom:20px;
+}
+
 input,textarea,label,span,p,div,select,td{
 	font-family: Verdana, Geneva, sans-serif;
 	font-size:10pt;
@@ -1835,7 +1839,9 @@ table.two-col-table{
   	border:none;
 	margin-top:10px;
 	margin-bottom:10px;
-	width:500px;
+	width:67%;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 table.two-col-table td:nth-child(2n+1){
