--- a/template/ManageUserMembership.html
+++ b/template/ManageUserMembership.html
@@ -112,8 +112,7 @@ supporting your business. <a href="">Learn more</a> of different memberships and
 				<td>
 					{% if m.is_active and m.role=='Trial' %}
 					{% elif m.is_active %}
-						<span class="command-link">Cancel</span> | 
-						<span class="command-link">Renew</span>
+						<span class="command-link">Cancel</span>
 					{% else %}
 						<span class="command-link">Renew</span>
 					{% endif %}
